fix main content visibility with margin top

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ main{
     background-color: aquamarine;
     /*main surplus space to push footer down*/
     flex:1 0 auto;
+    margin-top: 47px;
 }
 
 /*footer*/
